Fixing won't load on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: helvetica;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 #cy {
